[tool.poetry]
name = "ragdoll"
version = "0.3.0"
description = ""
authors = ["Aaron Zhang <rabbit.aaron@gmail.com>"]
license = "MIT"
homepage = "https://github.com/rabbit-aaron/ragdoll"
repository = "https://github.com/rabbit-aaron/ragdoll.git"

[tool.poetry.dependencies]
python = "^3.6.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py36", "py37", "py38", "py39", "py310", "py311"]
